@@ -18,7 +18,6 @@
 package org.drftpd.mirroring.archivetypes;
 
 import net.sf.drftpd.ObjectNotFoundException;
-import net.sf.drftpd.event.listeners.Archive;
 import net.sf.drftpd.master.config.FtpConfig;
 import net.sf.drftpd.mirroring.Job;
 import net.sf.drftpd.remotefile.LinkedRemoteFileInterface;
@@ -27,6 +26,7 @@ import org.apache.log4j.Logger;
 
 import org.drftpd.PropertyHelper;
 import org.drftpd.mirroring.ArchiveType;
+import org.drftpd.plugins.Archive;
 
 import org.drftpd.sections.SectionInterface;
 
@@ -38,7 +38,7 @@ import java.util.Properties;
 
 /**
  * @author zubov
- * @version $Id: MoveReleaseToSpecificSlaves.java,v 1.8 2004/11/09 18:59:55 mog Exp $
+ * @version $Id$
  */
 public class MoveReleaseToSpecificSlaves extends ArchiveType {
     private static final Logger logger = Logger.getLogger(MoveReleaseToSpecificSlaves.class);
